force-app/main/default/objects/ssot__CommodityUsage__dlm/fields/ssot__CommodityUsage_AssetId_map_Asset_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__CommodityUsage_AssetId_map_Asset_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CommodityUsage_AssetId_map_Asset_Id_N_1</label>
    <referenceTo>ssot__Asset__dlm</referenceTo>
    <relationshipLabel>CommodityUsage_AssetId_map_Asset_Id_N_1</relationshipLabel>
    <relationshipName>CommodityUsage_AssetId_map_Asset_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>