force-app/main/default/objects/ssot__CommodityUsage__dlm/fields/ssot__ConsumptionQuantity__c.field-meta.xml
<CustomField>
    <fullName>ssot__ConsumptionQuantity__c</fullName>
    <label>Consumption Quantity</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ConsumptionQuantity</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>