force-app/main/default/objects/ssot__CommodityUsage__dlm/fields/ssot__ConsumptionQuantityUOMId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ConsumptionQuantityUOMId__c</fullName>
    <label>Consumption Quantity Unit Of Measure</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ConsumptionQuantityUOMId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>