force-app/main/default/objects/ssot__CommodityUsage__dlm/fields/ssot__ServicePointExternalId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ServicePointExternalId__c</fullName>
    <label>Service Point External Id</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ServicePointExternalId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>