force-app/main/default/objects/ssot__CommodityUsage__dlm/fields/ssot__TimeOfUse__c.field-meta.xml
<CustomField>
    <fullName>ssot__TimeOfUse__c</fullName>
    <label>Time Of Use</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TimeOfUse</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>